# circle-advanced-setup-workflow

./: .gitignore
.circleci/: config.yml
module-java/: pom.xml
module-java/.circleci/: config.yml
module-java/src/main/java/com/zenika/test/app/: SumService.java
module-java/src/test/java/com/zenika/test/app/: SumServiceTest.java
module-node/: .eslintrc.json  package-lock.json  package.json  vitest.config.ts
module-node/.circleci/: config.yml
module-node/src/: index.ts  sum.spec.ts  sum.ts
module-python/: README.md  pyproject.toml
module-python/.circleci/: config.yml
module-python/src/module_python/: __init__.py
module-python/tests/: __init__.py
