[project]
name = "module-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Geraud Gratacap", email = "geraud.gratacap@gmail.com"},
]
dependencies = [
    "unittest-xml-reporting>=3.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "None"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
test = "python -m xmlrunner -o dist/reports"